# robot_system

./: .gitignore  README.md  docker-compose.yml
.claude/: settings.json
src/bringup/: CMakeLists.txt  package.xml
src/common/: CMakeLists.txt  package.xml
src/control/: CMakeLists.txt  package.xml
src/drivers/: CMakeLists.txt  README.md  package.xml
src/drivers/livox_ros_driver/: .gitignore
src/localization/: CMakeLists.txt  package.xml
src/mapping/: CMakeLists.txt  README.md  package.xml
src/mapping/FAST_LIO/: README.md
src/msgs/: CMakeLists.txt  package.xml
src/msgs/msg/: Localization.msg  Mission.msg  Obstacle.msg  ObstacleArray.msg  Trajectory.msg  TrajectoryPoint.msg  VehicleState.msg
src/perception/: CMakeLists.txt  package.xml
src/planning/: CMakeLists.txt  package.xml
src/robot_navigation/: CMakeLists.txt  package.xml
