<?xml version="1.0"?>
<package format="2">
  <name>bringup</name>
  <version>0.0.1</version>
  <description>启动管理：系统一键启动，传感器/定位/建图/感知/规划/控制启动</description>
  <maintainer email="xqs666@qq.com">xqs666</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
