<?xml version="1.0"?>
<package format="2">
  <name>common</name>
  <version>0.0.1</version>
  <description>公共模块：工具函数、数学计算、几何计算、配置管理、日志管理</description>
  <maintainer email="xqs666@qq.com">xqs666</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>
