<?xml version="1.0"?>
<package format="2">
  <name>drivers</name>
  <version>0.0.1</version>
  <description>驱动层：Livox/Innovusion激光雷达、IMU、RTK、相机、底盘驱动</description>
  <maintainer email="xqs666@qq.com">xqs666</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
</package>
