<?xml version="1.0"?>
<package format="2">
  <name>localization</name>
  <version>0.0.1</version>
  <description>定位层：FAST-LIO2、RTK融合、位姿管理、TF发布</description>
  <maintainer email="xqs666@qq.com">xqs666</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>msgs</depend>
</package>
