<?xml version="1.0"?>
<package format="2">
  <name>mapping</name>
  <version>0.0.1</version>
  <description>地图层：在线建图、离线建图、地图保存与加载</description>
  <maintainer email="xqs666@qq.com">xqs666</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>msgs</depend>
</package>
