<?xml version="1.0"?>
<package format="2">
  <name>robot_navigation</name>
  <version>0.0.0</version>
  <description>机器人导航功能包：建图(gmapping)、定位(amcl)、路径规划(move_base)</description>
  <maintainer email="xqs666@qq.com">xqs666</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>amcl</depend>
  <depend>geometry_msgs</depend>
  <depend>gmapping</depend>
  <depend>map_server</depend>
  <depend>move_base</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>
